--- a/public/styles/form.login.css
+++ b/public/styles/form.login.css
@@ -134,7 +134,7 @@ span {
     color: #f83016;
     margin-bottom: 1rem;
     border-radius: 0.5rem;
-    font-size: var(--font-size);
+    font-size: var(--font-size-menu);
     padding: 1rem 0;
     text-align: center;
 }
