--- a/public/styles/tables.css
+++ b/public/styles/tables.css
@@ -1,12 +1,24 @@
-.main .section-table .container-table .box-info-tabla h4 {
-    font-size: 3rem;
-    color: var(--primary-color);
+.main .section-table .box-button-modal {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 1.2rem;
+}
+
+.main .section-table .box-button-modal .button-modal-add {
+    padding: 0.8rem;
+    background-color: var(--primary-color);
+    color: var(--color-white);
+    border: none;
+    font-size: var(--font-size);
+    font-weight: 600;
+    border-radius: 0.5rem;
+    cursor: pointer;
 }
 
 .main .section-table .container-table {
     background-color: var(--color-containers);
-    padding: 3rem 2rem;
-    border-radius: 1.5rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
     height: 38rem;
     width: 100%;
     overflow: auto;
@@ -14,7 +26,6 @@
 
 .main .section-table .container-table .table {
     width: 100%;
-    margin-top: 4rem;
     border-collapse: collapse;
     table-layout: fixed;
     min-width: 105rem;
@@ -22,11 +33,13 @@
 
 .main .section-table .container-table .table thead {
     border-bottom: 0.1rem solid var(--color-secondary);
+    background-color: var(--color-black);
+    color: #fff;
 }
 
 .main .section-table .container-table .table th,
 .main .section-table .container-table .table td{
-    padding: 1rem 2rem;
+    padding: 1.2rem 0;
     word-break: break-all;
 }
 
@@ -37,21 +50,36 @@
 
 .main .section-table .container-table .table tr {
     text-align: center;
+    font-size: var(--font-size-menu);
+}
+
+.main .section-table .container-table .table tr img {
+    width: 5rem;
+    height: 5rem;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.main .section-table .container-table .table .button-events {
     font-size: var(--font-size);
-}
-
-.main .section-table .container-table .table tr td a {
+    background: none;
+    border: none;
     font-weight: bold;
-    color: var(--color-warning);
+    cursor: pointer;
 }
 
-.main .section-table .container-table .table tr td a i {
-    font-size: 2.2rem;
+.main .section-table .container-table .table #button-events-edit {
+    color: #007bff;
 }
 
+.main .section-table .container-table .table #button-events-delete {
+    color: var(--color-danger);
+}
 
-@media screen and (max-width: 400px) {
-    .main .section-table .container-table .box-info-tabla h4 {
-        font-size: 2rem;
-    }
+.main .section-table .container-table .table #button-events-details {
+    color: var(--color-secondary);
+}
+
+.main .section-table .container-table .table #button-events-calendar {
+    color: #019626;
 }
